syntax = "proto3";

package message.user;

import "google/protobuf/timestamp.proto";

option java_multiple_files = true;
option java_package = "ru.practicum.ewm.stats.grpc.user";

message UserActionProto{
  int64 userId = 1;
  int64 eventId = 2;
  ActionTypeProto actionType = 3;
  google.protobuf.Timestamp timestamp = 4;
}

enum ActionTypeProto{
  ACTION_VIEW = 0;
  ACTION_REGISTER = 1;
  ACTION_LIKE = 2;
}